--- a/MyProject.ipynb
+++ b/MyProject.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyMC7NJbXqd8D/014OsOIcGC",
+      "authorship_tag": "ABX9TyP9bFiH+DlZ38C9L3Kjjb1r",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,37 +28,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 402
+          "height": 106
         },
         "id": "MEZfUdSGWybs",
-        "outputId": "01646b39-c4be-481c-c351-e0b0991e9906"
+        "outputId": "189d4b55-baf1-41e4-dcd2-ae09f34219ed"
       },
       "outputs": [
         {
           "output_type": "error",
-          "ename": "ModuleNotFoundError",
-          "evalue": "No module named 'pyspark'",
+          "ename": "SyntaxError",
+          "evalue": "invalid syntax (<ipython-input-3-78c41773dea2>, line 119)",
           "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-1-360132abe9eb>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Import statements\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mpyspark\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msql\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mSparkSession\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mDataFrame\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mpyspark\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msql\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfunctions\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mlit\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcol\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mudf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwhen\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mpyspark\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msql\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtypes\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mStringType\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mArrayType\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mStructType\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mStructField\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mDoubleType\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mfunctools\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mreduce\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pyspark'",
-            "",
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
-          ],
-          "errorDetails": {
-            "actions": [
-              {
-                "action": "open_url",
-                "actionText": "Open Examples",
-                "url": "/notebooks/snippets/importing_libraries.ipynb"
-              }
-            ]
-          }
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-78c41773dea2>\"\u001b[0;36m, line \u001b[0;32m119\u001b[0m\n\u001b[0;31m    df.write.partitionBy(\"postal_code\").mode(\"overwrite\").parquet(C:\\Spark_SW\\MyProject)\u001b[0m\n\u001b[0m                                                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
         }
       ],
       "source": [
@@ -72,7 +57,7 @@
         "import os\n",
         "import findspark\n",
         "\n",
-        "# Initialize Spark\n",
+        "# Spark Session\n",
         "findspark.init()\n",
         "spark = (\n",
         "    SparkSession\n",
@@ -83,31 +68,23 @@
         "    .getOrCreate()\n",
         ")\n",
         "\n",
-        "# Initialize logger\n",
+        "# logger\n",
         "LOGGER = logging.getLogger()\n",
         "logging.basicConfig(level=logging.INFO, format='%(asctime)s - %(levelname)s - %(message)s')\n",
         "\n",
         "def get_data_by_brand(brand: str, logger: logging.Logger = LOGGER) -> DataFrame:\n",
-        "    \"\"\"Fetch input data based on brand.\n",
         "\n",
-        "    Args:\n",
-        "        brand: allowed values are (clp, okay, spar, dats, cogo)\n",
-        "        logger: Logger object for logging\n",
-        "\n",
-        "    Returns:\n",
-        "        The relevant DataFrame\n",
-        "    \"\"\"\n",
         "    logger.info(f\"Loading data for brand: {brand}\")\n",
         "\n",
         "    if brand not in ['clp', 'okay', 'spar', 'dats', 'cogo']:\n",
         "        logger.error(f\"Invalid brand value: {brand}\")\n",
-        "        raise ValueError(\"Invalid brand value. Allowed values are: clp, okay, spar, dats, cogo\")\n",
+        "        raise ValueError(\"Allowed values are: clp, okay, spar, dats, cogo\")\n",
         "\n",
         "    file_path = f\"/content/{brand}-places.json\"\n",
         "\n",
         "    if not os.path.exists(file_path):\n",
-        "        logger.error(f\"File path does not exist: {file_path}\")\n",
-        "        raise FileNotFoundError(f\"File path does not exist: {file_path}\")\n",
+        "        logger.error(f\"File path not exist: {file_path}\")\n",
+        "        raise FileNotFoundError(f\"File path not exist: {file_path}\")\n",
         "\n",
         "    try:\n",
         "        df = spark.read.json(file_path)\n",
@@ -116,12 +93,11 @@
         "        logger.error(f\"Error loading data for brand: {brand}: {str(e)}\")\n",
         "        raise\n",
         "\n",
-        "    # Add brand column\n",
+        "    # Adding Brand COlumn\n",
         "    df = df.withColumn(\"brand\", lit(brand))\n",
         "    return df\n",
-        "\n",
+        "\"\"\"Combine DF unionByName.\"\"\"\n",
         "def union_all(dfs: list) -> DataFrame:\n",
-        "    \"\"\"Combine multiple DataFrames into a single DataFrame using unionByName.\"\"\"\n",
         "    return reduce(lambda df1, df2: df1.unionByName(df2), dfs)\n",
         "\n",
         "def add_missing_columns(df: DataFrame, required_cols: list) -> DataFrame:\n",
@@ -132,21 +108,14 @@
         "    return df\n",
         "\n",
         "def handle_dataframes(dataframes: dict, required_cols: list) -> dict:\n",
-        "    \"\"\"Ensure all DataFrames have the required columns.\"\"\"\n",
+        "\n",
         "    for name, df in dataframes.items():\n",
         "        if df is not None:\n",
         "            dataframes[name] = add_missing_columns(df, required_cols)\n",
         "    return dataframes\n",
         "\n",
         "def preprocess_data(df: DataFrame) -> DataFrame:\n",
-        "    \"\"\"Process DataFrame according to the given requirements.\n",
         "\n",
-        "    Args:\n",
-        "        df: The input DataFrame.\n",
-        "\n",
-        "    Returns:\n",
-        "        The processed DataFrame.\n",
-        "    \"\"\"\n",
         "    # Drop 'placeSearchOpeningHours'\n",
         "    if \"placeSearchOpeningHours\" in df.columns:\n",
         "        df = df.drop(\"placeSearchOpeningHours\")\n",
@@ -156,11 +125,11 @@
         "        df = df.withColumn(\"lat\", col(\"geoCoordinates.latitude\"))\n",
         "        df = df.withColumn(\"lon\", col(\"geoCoordinates.longitude\"))\n",
         "\n",
-        "    # Extract 'postal_code' from 'address'\n",
+        "    # Extract 'postal_code' from 'address' using Split\n",
         "    postal_code_udf = udf(lambda address: address.split()[-1] if address else None, StringType())\n",
         "    df = df.withColumn(\"postal_code\", postal_code_udf(col(\"address\")))\n",
         "\n",
-        "    # Create 'province' column based on 'postal_code'\n",
+        "    # Create 'province' column on 'postal_code'\n",
         "    df = df.withColumn(\"province\", when(col(\"postal_code\").between(\"1000\", \"1299\"), \"Brussel\")\n",
         "                                    .when(col(\"postal_code\").between(\"1300\", \"1499\"), \"Waals-Brabant\")\n",
         "                                    .when(col(\"postal_code\").between(\"1500\", \"1999\"), \"Vlaams-Brabant\")\n",
@@ -196,14 +165,9 @@
         "    return df\n",
         "\n",
         "def save_data(df: DataFrame, path: str) -> None:\n",
-        "    \"\"\"Save DataFrame to parquet file with partitioning.\n",
         "\n",
-        "    Args:\n",
-        "        df: The DataFrame to save.\n",
-        "        path: The path where the parquet file will be saved.\n",
-        "    \"\"\"\n",
-        "    df.write.partitionBy(\"postal_code\").mode(\"overwrite\").parquet(path)\n",
-        "    LOGGER.info(f\"Data saved successfully to: {path}\")\n",
+        "    df.write.partitionBy(\"postal_code\").mode(\"overwrite\").parquet(C:\\Spark_SW\\MyProject)\n",
+        "    LOGGER.info(f\"Data saved successfully to: {C:\\Spark_SW\\MyProject}\")\n",
         "\n",
         "# Initialize variables\n",
         "combined_df = None\n",
@@ -249,15 +213,15 @@
         "# Show sample data for each DataFrame if they were successfully loaded\n",
         "for name, df in dataframes.items():\n",
         "    if df is not None:\n",
-        "        df.show(5)\n",
+        "        df.show(10)\n",
         "\n",
         "# Show the combined DataFrame if it was successfully created\n",
         "if combined_df is not None:\n",
-        "    combined_df.show(5)\n",
+        "    combined_df.show(10)\n",
         "\n",
         "# Show the processed DataFrame if it was successfully processed\n",
         "if processed_df is not None:\n",
-        "    processed_df.show(5)\n"
+        "    processed_df.show(10)\n"
       ]
     },
     {
